--- a/FoodPiper/MakeReservationView.xib
+++ b/FoodPiper/MakeReservationView.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewIndividualRestaurantViewController" customModule="FoodPiper" customModuleProvider="target"/>
@@ -35,6 +35,9 @@
                         <constraint firstAttribute="height" constant="60" id="ckg-Fm-Ed2"/>
                         <constraint firstAttribute="width" constant="60" id="kWB-OY-Bu7"/>
                     </constraints>
+                    <connections>
+                        <action selector="setReservation:" destination="-1" eventType="touchUpInside" id="7Dg-DY-Ipa"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Small" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cby-Wd-94C" customClass="CancelIcon" customModule="FoodPiper" customModuleProvider="target">
                     <rect key="frame" x="140" y="18" width="40" height="40"/>
